--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,1 +1,12 @@
-<h1>Hola!</h1>
+<main>
+    <h1>LOGIN</h1>
+    <form action="/" method="post">
+        <label for="email">EMAIL</label>
+        <input name="email" type="email" id="email">
+        <label for="password">CONTRASEÑA</label>
+        <input name="password" type="password" id="password">
+        <input type="submit" value="Login">
+    </form>
+    <a href="/api/users/register">REGISTRARSE</a>
+    <a href="/github"><button>INGRESAR CON GITHUB</button></a>
+</main>
