--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ecommerce Quiros</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/stylesheet.css" />
+    <title>{{title}}</title>
 </head>
-<body>
-    {{{body}}}
-</body>
+    <body>
+        {{>nav}}
+        {{{body}}}
+        {{>footer}}
+        <script src="js/script.js"></script>
+    </body>
 </html>
